--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Django>=4.2,<5.0
 djangorestframework>=3.14.0
-pillow>=9.2.0 
-whitenoise>=6.0.0 
-crispy_forms>=2.3
+pillow>=10.3.0
+whitenoise>=6.6.0
+django-crispy-forms>=2.1
